force-app/main/default/objects/shareconnect__Share_Connect_Event__c/shareconnect__Share_Connect_Event__c.object-meta.xml
<CustomObject>
    <label>Share Connect Event</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Share Connect Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Share Connect Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>