force-app/main/default/objects/shareconnect__Share_Connect_Event__c/fields/shareconnect__Automation_Operations__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Automation_Operations__c</fullName>
    <label>Automation Operations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>