force-app/main/default/objects/shareconnect__Share_Connect_Event__c/fields/shareconnect__Parent_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Parent_Record_ID__c</fullName>
    <label>Parent Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>