force-app/main/default/objects/shareconnect__Share_Connect_Event__c/fields/shareconnect__Result__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Result__c</fullName>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>