force-app/main/default/objects/shareconnect__Share_Connect_Event__c/fields/shareconnect__Result_Detail__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Result_Detail__c</fullName>
    <label>Result Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>